// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tsc > arktype 1`] = `
"// arktype.d.ts
import * as arktype_internal_variants_object_ts from "arktype/internal/variants/object.ts";

//#region tests/fixtures/arktype.d.ts
declare const test: arktype_internal_variants_object_ts.ObjectType<{
  test: string;
}, {}>;
//#endregion
export { test };"
`;

exports[`tsc > compiler project sourcemap (build: false) 2`] = `
"// index.d.ts
//#region src/index.d.ts
declare const a = 1;
//#endregion
export { a };
//# sourceMappingURL=index.d.ts.map

// index.d.ts.map
{"version":3,"names":[],"sources":["../src/index.ts"],"sourcesContent":["export const a = 1\\n"],"mappings":";AAAA,cAAa,IAAC","file":"index.d.ts"}
// index.js
//#region tests/fixtures/deep-source-map/src/index.ts
const a = 1;

//#endregion
export { a };"
`;

exports[`tsc > compiler project sourcemap (build: true) 2`] = `
"// index.d.ts
//#region src/index.d.ts
declare const a = 1;
//#endregion
export { a };
//# sourceMappingURL=index.d.ts.map

// index.d.ts.map
{"version":3,"names":[],"sources":["../src/index.d.ts"],"sourcesContent":["export declare const a = 1;\\n"],"mappings":";AAAA,cAAqB,IAAI","file":"index.d.ts"}
// index.js
//#region tests/fixtures/deep-source-map/src/index.ts
const a = 1;

//#endregion
export { a };"
`;

exports[`tsc > composite references 1`] = `
"// input1.d.ts
//#region dir1/input1.d.ts
declare const input1 = "input1";
//#endregion
export { input1 };
// input1.js
//#region tests/fixtures/composite-refs/dir1/input1.ts
const input1 = "input1";

//#endregion
export { input1 };
// input2.d.ts
//#region dir2/input2.d.ts
declare const input2 = "input2";
//#endregion
export { input2 };
// input2.js
//#region tests/fixtures/composite-refs/dir2/input2.ts
const input2 = "input2";

//#endregion
export { input2 };"
`;

exports[`tsc > composite references incremental 1`] = `
"// input1.d.ts
//#region dir1/input1.d.ts
declare const input1 = "input1";
//#endregion
export { input1 };
// input1.js
//#region tests/fixtures/composite-refs-incremental/dir1/input1.ts
const input1 = "input1";

//#endregion
export { input1 };
// input2.d.ts
//#region dir2/input2.d.ts
declare const input2 = "input2";
//#endregion
export { input2 };
// input2.js
//#region tests/fixtures/composite-refs-incremental/dir2/input2.ts
const input2 = "input2";

//#endregion
export { input2 };"
`;

exports[`tsc > import JSON 1`] = `
"// index.d.ts
declare namespace foo_json_d_exports {
  export { name, age };
}
declare const name: string;
declare const age: number;
declare namespace bar_json_d_exports {
  export {  };
}
declare const _default$4: any[];
declare namespace invalid_json_d_exports {
  export { __ };
}
declare const __: string;
declare const _default$3: {
  "1": number;
  "class": string;
  __: string;
  "\\"": string;
  "\\\\": string;
};
//#region tests/fixtures/import-json/nested.json.d.ts
declare const openapi: string;
declare const info: object;
declare const components: object;
declare const paths: object;
declare const _default$2: {
  openapi: string;
  info: object;
  components: object;
  paths: object;
};
//#endregion
//#region tests/fixtures/import-json/array-of-object.json.d.ts
declare const _default$1: any[];
//#endregion
export { age, arrayOfObjects, bar, bar_json_d_exports as barNs, foo, foo_json_d_exports as fooNs, invalid_json_d_exports as invalidNs, name, nested };"
`;

exports[`tsc > jsdoc 1`] = `
"// jsdoc.d.ts
import { Plugin } from "rolldown";

//#region tests/fixtures/jsdoc.d.ts
/**
* with imports
*/
interface RollupMdiFontminOptions extends Plugin {}
/**
* named export
*/
declare function fn(): number;
/**
* options
*/
interface Options {
  /**
  * interface member
  */
  foo: string;
}
/**
* type alias
*/
type Foo = string;
/**
* default export
*/
declare const _default: number;
//#endregion
export { Foo, Options, RollupMdiFontminOptions, _default as default, fn };
// jsdoc.js
//#region tests/fixtures/jsdoc.ts
/**
* named export
*/
function fn() {
	return 42;
}
/**
* default export
*/
var jsdoc_default = fn();

//#endregion
export { jsdoc_default as default, fn };"
`;

exports[`tsc > multi declarations 1`] = `
"// index.d.ts
//#region tests/fixtures/multi-decls/mod.d.ts
declare const a: 1, b: 2;
//#endregion
//#region tests/fixtures/multi-decls/index.d.ts
declare const a$1 = 3, b$1 = 3;
//#endregion
export { a, b, a$1 as c, b$1 as d };"
`;

exports[`tsc > references 1`] = `
"// index.d.ts
//#region src/index.d.ts
declare const a = 1;
//#endregion
export { a };
// index.js
//#region tests/fixtures/refs/src/index.ts
const a = 1;

//#endregion
export { a };"
`;

exports[`tsc > rename infer 1`] = `
"// infer-renaming.d.ts
import { infer as Infer, z } from "zod";

//#region tests/fixtures/infer-renaming.d.ts
declare const productSchema: z.ZodObject<{
  id: z.ZodString;
  price: z.ZodNumber;
}, z.core.$strip>;
declare const product: Infer<typeof productSchema>;
//#endregion
export { product, productSchema };"
`;

exports[`tsc > resolve paths > resolver: oxc 1`] = `
"// index.d.ts
import { foo } from "@/mod";
export { foo };"
`;

exports[`tsc > resolve paths > resolver: tsc 1`] = `
"// index.d.ts
import { foo } from "@/mod";
export { foo };"
`;

exports[`tsc > ts-macro w/ ts-compiler 1`] = `
"// main.d.ts
//#region main.d.ts
declare function defineStyle(style: string): string;
//#endregion
export { defineStyle as default };"
`;

exports[`tsc > typescript compiler 1`] = `
"// entry1.d.ts

declare const str = "foo";
declare const num = 42;
declare const bool = true;
declare function fn(arg: typeof str): "foo" | 1;
//#endregion
export { bool, fn, num, str };
// entry2.d.ts

interface Unused {
  foo: string;
}
//#endregion
export { Unused };"
`;

exports[`tsc > vue-sfc w/ ts-compiler 1`] = `
"// main.d.ts
//#region tests/fixtures/vue-sfc/App.vue.d.ts
declare const _default: any;
//#endregion
export { App };"
`;

exports[`tsc > vue-sfc w/ ts-compiler w/ vueCompilerOptions in tsconfig 1`] = `
"// main.d.ts
//#region App.vue.d.ts
declare const _default: any;
//#endregion
export { App };"
`;

exports[`tsc > vue-sfc w/ ts-macro w/ ts-compiler 1`] = `
"// main.d.ts
//#region App.vue.d.ts
declare const _default: any;
//#endregion
//#region main.d.ts
declare function defineStyle(style: string): any;
//#endregion
export { App, defineStyle };"
`;
